# horae

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dioxus.toml  PLAN.md  README.md  SPEC.md  flake.nix  horae.db  seed.sql  skills-lock.json
.claude/: settings.json
.claude/skills/: design-implement
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cachix.yml  ci.yml  pages.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
.sqlx/: query-040c4fd7822213775c75c83c06478abcd39d5a80e42d77c1fa729e5924ff5b96.json  query-04737c43cbd8c4663b900f081551551a1b01ec05c82933333ee004e2fc6cea1c.json  query-04990ea4cc9fd2437f8b5444d07efa340d364126c6e63beafa6a992d5e85c8bb.json  query-063b5f9f51702cbfc5cd099c4401cf5cbbceab174c9b86e45b2c61dcca0c2b10.json  query-075188131e96ed22dfe7abe38dd1c23d8e2cebe784735f6a76e35f0410ec409c.json  query-083bd0359d9d4c8c5f74a2d3c912b77f83a214878dba0dcdb0c7c3a4611e2708.json  query-09ec3199adcaa44d29c9a97cf46d48387fd4e42b7fe23a5969bd5a22861c4d08.json  query-0abc1ac618fe6be60e3f4a40ea699c2be0c6a13dc80646311796e520ee4ab648.json  query-0b8596a9aee51337f30497d4119c0d853ba2cfa2cb406e7950a7475686dbe539.json  query-0b889755beac0e5a732a345541fa6eb0e9d5165fc7e1e161b75b591dd574e198.json  query-0bc1d57d18a896384748f0896b0104059f8a79ab8f5b2dbcf2cf0c01ea6b75e3.json  query-0c2f074e9d13644d622b80bc6a245516b43f2caa82ad56bdf0a3ed0e111b682c.json  query-0d326599e909b729ba59e5e560490b08a498faf10a7677c58d0e85fc444d43ab.json  query-0dc6d9bf64363cf987c27b1f83b6160644031a55104d8b80838091e9c6d233c3.json  query-13fbd82f27af12100bf25d7ea1d8197a83c1a32d1ccd5e4545b513029454b234.json  query-17f30685cbbab47d7c80c982432679c7c22d894366c1d911689025dec17c0e3a.json  query-19bd028b96e5540fda8ad96300db00e76f174d7a6759af5e083e46cf165af8b0.json  query-1a9c78f6bbf0efcb6a0e43b6d7e6a22b478ad1c76009af1522da384efb269df2.json  query-1b61309110120537afb5a7861395dc9972c0500f07446e46742228f5b8a7507b.json  query-1c30f3410ba99b42875853927cbcc3b3eff72874c0cfab7f6026aed8c6aa9b0e.json  query-1ea80ea67af1dc381c04659a60a6830cd31564721905ceeab9f5fa94d64934de.json  query-1ef3dc97eb4273c6724d53362335c88dc0618de1c1020a21848f47ed123c2368.json  query-20ec1428476a11ab503dc5facd6960c771c675ea8d9eb461d00441a2bc1de7b9.json  query-217a0653f59adfa1c3fd246509d07cb258125581f8450ef1cc73e337c43eccb0.json  query-23a73acbe46e24c0345773f3f5e24f26a2c31d7c6242430d65fe09f403c7bae3.json  query-23dd1324dc0c193bc00169d62ef906308514b16b2fa95ab9ef92722efd1c12e0.json  query-262a95441718d8b0cc2ef243b53449b9a694ed3c7139438b84b81aead3e59920.json  query-28224e034780b10443b4f3ff67ba23a4efa28c91c4567dbe8873c85c7026ad2f.json  query-293e2d40a8a9d5204f0597efd656fbae1f6c3a9bb3b22bd32286b2f08d8bceab.json  query-298c55f5f3b398cf83dc8482dab21fad06c8fee7b98a69d645a1ac5b2f391062.json  query-2df080cc9e61aa898058aae4ad2acf4914fa04ee6b0fe3e10ce59c1445677766.json  query-2ee470d525f396e48fc7261555ba024874e45c3356824d988f095c5b951cc5fb.json  query-2eeefad5ebf2639f3d38eee6fe3b65df71031072d276272bce1fff4c4077e686.json  query-3022135538d0986c28a57dd3b63e26dee41d6daf04b483bc4d7ad91fdfb71d10.json  query-3053476ccea71509f8b69442b15f86752e5b748158c847bf8bba8deed4c2ac71.json  query-31fa19ea9cafc534c6d3df1892e2f0f83842855d5d3fb220c98e2b13f9fe2acd.json  query-364ddb660191bf63488c1309e11fb62e249516bd8496aad8a9f72416bd2a646d.json  query-3850de35f15535aeb91ae39ce16c6480d2449f6c32fab54ec5f5479bbfbc98c4.json  query-396a1d0e89b976b7a3289fa07f9d2de4192cbb67828f25edf9715383bb66756b.json  query-3a6381940b9240215accb0f8fe915867cb181909ca8046518200627d1925ebc8.json  (+135 more)
assets/css/: horae.css
core/: Cargo.toml
core/src/: rounding.rs  state.rs  totals.rs  types.rs
crates/core/: Cargo.toml
crates/core/src/: budget.rs  duration.rs  invoice.rs  lib.rs  money.rs  totals.rs  types.rs
crates/cssgen/: Cargo.toml
crates/horae/: Cargo.toml  build.rs
crates/horae/assets/css/: horae-utils.css  horae.css
crates/horae/migrations/: 0001_init.sql  0002_invoices.sql  0003_org_branding.sql  0004_plugin_event_support.sql
crates/horae/src/: app.rs  cli.rs  components.rs  config.rs  db.rs  error.rs  main.rs  models.rs  pages.rs  render.rs  reports.rs  route.rs  scheduler.rs  seed.rs  server_fns.rs  state.rs
crates/horae/src/auth/: dev.rs  mod.rs  oidc.rs  page.rs
crates/horae/src/components/: avatar.rs  button.rs  card.rs  combobox.rs  controls.rs  form.rs  icons.rs  layout.rs  logo.rs  menu.rs  nav.rs  sidebar.rs  timer_widget.rs  toast.rs
crates/horae/src/harvest/: auth.rs  mod.rs  types.rs
crates/horae/src/models/: assignment.rs  client.rs  invoice.rs  organization.rs  project.rs  task.rs  time_entry.rs  user.rs
crates/horae/src/pages/: admin.rs  approvals.rs  clients.rs  dashboard.rs  gallery.rs  invoices.rs  projects.rs  reports.rs  settings.rs  time.rs  timesheet.rs
crates/horae/src/plugin/: event.rs  host.rs  manifest.rs  registry.rs
crates/horae/src/server_fns/: approvals.rs  auth.rs  clients.rs  invoices.rs  mod.rs  organization.rs  projects.rs  reports.rs  time_entries.rs  users.rs
crates/horae/templates/: invoice.typ
crates/horae/tests/: integration.rs
crates/horae/tests/fixtures/plugins/echo-plugin/: echo_plugin.wasm  plugin.toml
crates/horae/tests/fixtures/plugins/fail-plugin/: fail_plugin.wasm  plugin.toml
design/: README.md
design/project/: .thumbnail  Horae Design System.dc.html  Horae Logo.dc.html  concepts.dc.html  dark.dc.html  light.dc.html
migrations/: 0001_users.sql  0002_clients.sql  0003_projects.sql  0004_time_entries.sql  0005_invoices.sql  0006_sessions.sql
nix/: devshell.nix  formatter.nix  package.nix  treefmt.nix
nix/checks/: clippy.nix  cssgen.nix  e2e-oidc.nix  (+4 more)
site/: index.html
src/: app.rs  cli.rs  components.rs  config.rs  db.rs  error.rs  main.rs  models.rs  pages.rs  plugin.rs  reports.rs  route.rs  seed.rs  server_fns.rs  state.rs
tests/: integration.rs
(+101 files in other folders)
