[package]
name = "horae"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "horae"
path = "src/main.rs"

[features]
default = ["fullstack"]
fullstack = []
server = [
  "dioxus/server",
  "dep:tokio",
  "dep:axum",
  "dep:tower-http",
  "dep:sqlx",
  "dep:argon2",
  "dep:tower-sessions",
  "dep:tower-sessions-sqlx-store",
  "dep:tracing-subscriber",
  "dep:extism",
  "dep:toml",
]
web = ["dioxus/web"]

[dependencies]
dioxus = { version = "0.7", features = ["fullstack", "router"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde", "js"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"

# server-only
tokio = { version = "1", features = ["full"], optional = true }
axum = { version = "0.7", features = ["macros", "multipart"], optional = true }
tower-http = { version = "0.6", features = ["fs", "compression-gzip", "trace"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "uuid", "chrono", "migrate"], optional = true }
argon2 = { version = "0.5", optional = true }
tower-sessions = { version = "0.14", optional = true }
tower-sessions-sqlx-store = { version = "0.14", features = ["sqlite"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
extism = { version = "1", optional = true }
toml = { version = "0.8", optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
