[package]
name = "horae-core"
version = "0.1.0"
edition = "2024"

[features]
sqlx = ["dep:sqlx"]

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
sqlx = { version = "0.8", features = ["postgres"], optional = true }
