[package]
name = "horae"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "horae"
path = "src/main.rs"

[features]
default = []
server = [
  "horae-core/sqlx",
  "dioxus/server",
  "dep:tokio",
  "dep:axum",
  "dep:tower-http",
  "dep:sqlx",
  "dep:tower-sessions",
  "dep:tower-sessions-sqlx-store",
  "dep:tracing-subscriber",
  "dep:openidconnect",
  "dep:csv",
  "dep:rust_xlsxwriter",
  "dep:typst",
  "dep:typst-as-lib",
  "dep:typst-pdf",
  "dep:typst-layout",
  "dep:extism",
  "dep:toml",
  "dep:ureq",
]
web = ["dioxus/web", "dep:gloo-timers"]

[dependencies]
horae-core = { path = "../core", features = [] }
dioxus = { version = "0.7", features = ["fullstack", "router"] }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
uuid = { version = "1", features = ["v7", "serde", "js"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
# wasm-bindgen version must match exactly the version of wasm-bindgen-cli in nixpkgs
# that dioxus cli is built with:
#
# https://github.com/NixOS/nixpkgs/blob/0bb7ec54c8483066ec9d7720e780a5caa71f8612/pkgs/by-name/di/dioxus-cli/package.nix#L12
wasm-bindgen = "=0.2.126"

# server-only
tokio = { version = "1", features = ["full"], optional = true }
axum = { version = "0.8", features = ["macros", "multipart"], optional = true }
tower-http = { version = "0.6", features = [
  "fs",
  "compression-gzip",
  "trace",
], optional = true }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
], optional = true }
tower-sessions = { version = "0.14", optional = true }
tower-sessions-sqlx-store = { version = "0.15", features = [
  "postgres",
], optional = true }
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
], optional = true }
openidconnect = { version = "3", optional = true }
csv = { version = "1", optional = true }
rust_xlsxwriter = { version = "0.80", optional = true }
typst = { version = "0.15", optional = true }
typst-as-lib = { version = "0.16", features = [
  "typst-kit-fonts",
  "typst-kit-embed-fonts",
], optional = true }
typst-pdf = { version = "0.15", optional = true }
typst-layout = { version = "0.15", optional = true }
extism = { version = "1", optional = true }
toml = { version = "0.8", optional = true }
# Blocking HTTP client for the `horae_http_post` plugin host function. extism host
# functions are synchronous, so a blocking client avoids bridging to the async
# runtime. rustls (default) keeps the build free of a system OpenSSL dependency.
ureq = { version = "2", optional = true }

# web-only
gloo-timers = { version = "0.3", features = ["futures"], optional = true }

[dev-dependencies]
serial_test = "3"
tempfile = "3"
